apps/base/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
