apps/base/prowlarr/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-https-route
  namespace: prowlarr
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - prowlarr.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: prowlarr-svc
          port: 9696
